# Tiko

./: .dockerignore  .env.example  .gitignore  README.cn.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: quality.yml
app/: .dockerignore  Dockerfile  README.md  next.config.ts  package.json  pnpm-lock.yaml
docs/: architecture.md
docs/report/: open-source-trading-agents-research.md
infra/: api.Dockerfile  docker-compose.yml
scripts/: check_artifact_hygiene.py  check_compose_smoke.py  check_quality.py
tests/: test_agent_runtime.py  test_api_control_plane.py  test_artifact_hygiene.py  test_ci_workflow.py  test_comparison.py  test_compose_smoke.py  test_db_migrations.py  test_db_repositories.py  test_domain_schemas.py  test_import_hygiene.py  test_infra_topology.py  test_market_data_connectors.py  test_market_data_importers.py  test_market_replay.py  test_observation_builder.py  test_plugins.py  test_quality_gate.py  test_realtime_fanout.py  test_research_control_plane.py  test_risk_portfolio_controls.py  test_rl_lab.py  test_runtime_control_plane.py  test_runtime_process_roles.py  test_simulated_exchange.py  test_simulation_service.py
tiko/: __init__.py
tiko/agents/: __init__.py  openrouter.py  rule_based.py  runtime.py
tiko/analysis/: __init__.py  comparison.py
tiko/api/: __init__.py  dependencies.py  main.py
tiko/core/: __init__.py  auth.py  config.py
tiko/data/: __init__.py  connectors.py  importers.py  normalization.py  validation.py
tiko/db/: __init__.py  models.py  repositories.py  session.py
tiko/domain/: __init__.py  account.py  agent.py  base.py  comparison.py  dataset.py  decision.py  experiment.py  market.py  memory.py  model.py  observation.py  order.py  plugin.py  portfolio.py  registry.py  reporting.py  risk.py  rl.py  runtime.py  security.py  simulation.py
tiko/observation/: __init__.py  builder.py
tiko/plugins/: __init__.py  sandbox.py
tiko/rl_lab/: __init__.py  environment.py  training.py
tiko/runtime/: __init__.py  (+1 more)
(+85 files in other folders)
