[project]
name = "tiko"
version = "0.1.0"
description = "Cryptocurrency simulation trading agent platform."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.6",
]

[tool.uv]
required-environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'linux'",
]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.mypy]
disable_error_code = ["import-untyped"]
