[project]
name = "tiko"
version = "0.1.0"
description = "Cryptocurrency simulation trading agent platform."
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.5.24",
    "fastapi>=0.128.0",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "pytest>=9.0.2",
    "ruff>=0.14.6",
]

[tool.uv]
required-environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'linux'",
]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.mypy]
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
pythonpath = ["."]
